force-app/main/default/objects/Order/fields/Deliver_To_Site__c.field-meta.xml
<CustomField>
    <fullName>Deliver_To_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Twinned from Quote</description>
    <label>Deliver To Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Deliver To Site)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>