force-app/main/default/objects/Order/fields/Is_Order_Start_Date_in_Past__c.field-meta.xml
<CustomField>
    <fullName>Is_Order_Start_Date_in_Past__c</fullName>
    <formula>EffectiveDate &lt;   DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Order Start Date in Past</label>
    <type>Checkbox</type>
</CustomField>