force-app/main/default/objects/Order/fields/qtc_Auto_Submit__c.field-meta.xml
<CustomField>
    <fullName>qtc_Auto_Submit__c</fullName>
    <description>HSR Mass Upload - This is a mandatory field.</description>
    <label>Auto-Submit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y-YES</fullName>
                <default>true</default>
                <label>Y-YES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>