force-app/main/default/objects/Order/fields/qtc_Available_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>qtc_Available_Bill_To__c</fullName>
    <description>HSR Mass Upload: This is an optional field. If not populated, for all orders except Site Order, default address will be fetched from customer&apos;s contract and for site orders, default will be copied from HSR Master Order. If populated, it will override all defaults.</description>
    <formula>qtc_Bill_To_Site__r.Site_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Bill To</label>
    <type>Text</type>
</CustomField>