force-app/main/default/objects/Order/fields/qtc_Available_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>qtc_Available_Ship_To__c</fullName>
    <description>HSR Mass Upload - This is an optional field. If not populated, for all orders except Site Order, default address will be fetched from ERP and for site orders, default will be copied from HSR Master Order. If populated, it will override all defaults.</description>
    <formula>qtc_Ship_To_Account__r.Site_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Ship To</label>
    <type>Text</type>
</CustomField>