force-app/main/default/objects/Order/fields/qtc_Bill_To_Site__c.field-meta.xml
<CustomField>
    <fullName>qtc_Bill_To_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Twinned from quote</description>
    <label>Bill To Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Bill To Site)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>