force-app/main/default/objects/Order/fields/qtc_Bill_To_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>qtc_Bill_To_Site_Number__c</fullName>
    <formula>qtc_Bill_To_Site__r.Site_Number__c</formula>
    <label>Bill To Site Number</label>
    <type>Text</type>
</CustomField>