force-app/main/default/objects/Order/fields/qtc_Carrier__c.field-meta.xml
<CustomField>
    <fullName>qtc_Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>Omni</fullName>
            </value>
            <value>
                <fullName>Pegasus</fullName>
            </value>
            <value>
                <fullName>Seko</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>