force-app/main/default/objects/Order/fields/qtc_Contract__c.field-meta.xml
<CustomField>
    <fullName>qtc_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Orders on Contract</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>