force-app/main/default/objects/Order/fields/qtc_Current_Help_Desk_Value__c.field-meta.xml
<CustomField>
    <fullName>qtc_Current_Help_Desk_Value__c</fullName>
    <description>twinned from Quote</description>
    <inlineHelpText>Additional Help Desk value</inlineHelpText>
    <label>Current Help Desk Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>