force-app/main/default/objects/Order/fields/qtc_Deliver_To_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>qtc_Deliver_To_Site_Address__c</fullName>
    <formula>IF(ISBLANK(Deliver_To_Site__c),&apos;&apos;,
Deliver_To_Site__r.BillingStreet &amp; BR() &amp;
Deliver_To_Site__r.BillingCity &amp; &quot;,&quot;&amp; &quot; &quot; &amp; Deliver_To_Site__r.BillingState &amp; &quot; &quot; &amp; Deliver_To_Site__r.BillingPostalCode &amp; BR() &amp;
Deliver_To_Site__r.BillingCountry
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deliver To Site Address</label>
    <type>Text</type>
</CustomField>