force-app/main/default/objects/Order/fields/qtc_ERP_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>qtc_ERP_Order_Date__c</fullName>
    <label>ERP Order Date</label>
    <type>Date</type>
</CustomField>