force-app/main/default/objects/Order/fields/qtc_Existing_Hosted_Enterprise_ID__c.field-meta.xml
<CustomField>
    <fullName>qtc_Existing_Hosted_Enterprise_ID__c</fullName>
    <label>Existing Hosted Enterprise ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>