force-app/main/default/objects/Order/fields/qtc_Hold_Billing__c.field-meta.xml
<CustomField>
    <fullName>qtc_Hold_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold Billing</label>
    <type>Checkbox</type>
</CustomField>