force-app/main/default/objects/Order/fields/qtc_Invoice_Trigger__c.field-meta.xml
<CustomField>
    <fullName>qtc_Invoice_Trigger__c</fullName>
    <description>HSR Mass Upload - This is an optional field. If not populated, for all orders except Site Order, default Invoice Trigger will be fetched from customer&apos;s contract and for site orders, default will be copied from HSR Master Order. If populated, it will override all defaults.</description>
    <formula>TEXT(Opportunity.Invoice_Trigger__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Trigger</label>
    <type>Text</type>
</CustomField>