force-app/main/default/objects/Order/fields/qtc_Master_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>qtc_Master_Customer_Number__c</fullName>
    <formula>Account.Master_Customer_Number__c</formula>
    <label>Master Customer Number</label>
    <type>Text</type>
</CustomField>