force-app/main/default/objects/Order/fields/qtc_Master_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>qtc_Master_Quote_Number__c</fullName>
    <description>HSR Mass Upload - This field is mandatory if Order Type selected is &apos;HSR Site&apos; and should be populated with Approved HSR Master Quote Number.</description>
    <label>Master Quote Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>