force-app/main/default/objects/Order/fields/qtc_Multi_Site__c.field-meta.xml
<CustomField>
    <fullName>qtc_Multi_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an order&apos;s quote is Multi-Site</description>
    <label>Multi-Site</label>
    <type>Checkbox</type>
</CustomField>