force-app/main/default/objects/Order/fields/qtc_Multi_Site_Parent_Quote__c.field-meta.xml
<CustomField>
    <fullName>qtc_Multi_Site_Parent_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link multi-site quotes together</description>
    <label>Multi-Site Parent Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Orders (Multi-Site Parent Quote)</relationshipLabel>
    <relationshipName>Multi_Site_Child_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>