force-app/main/default/objects/Order/fields/qtc_Multi_Site_Relationship__c.field-meta.xml
<CustomField>
    <fullName>qtc_Multi_Site_Relationship__c</fullName>
    <label>Multi-Site Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>