force-app/main/default/objects/Order/fields/qtc_Multi_Site_Type__c.field-meta.xml
<CustomField>
    <fullName>qtc_Multi_Site_Type__c</fullName>
    <description>specifies the type of multi-site deal being configured. All quotes in the child/parent relationship should share the same value</description>
    <label>Multi-Site Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AE+PP</fullName>
            </value>
            <value>
                <fullName>AE Only</fullName>
            </value>
            <value>
                <fullName>PP Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>