force-app/main/default/objects/Order/fields/qtc_New_Aloha_Key_Number__c.field-meta.xml
<CustomField>
    <fullName>qtc_New_Aloha_Key_Number__c</fullName>
    <label>Aloha Key Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>