force-app/main/default/objects/Order/fields/qtc_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>qtc_Opportunity_Number__c</fullName>
    <description>HSR Mass Upload - This field is mandatory if the total Revenue is greater than the defined threshold.</description>
    <formula>Opportunity.Opportunity_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>