force-app/main/default/objects/Order/fields/qtc_Order_End_Date__c.field-meta.xml
<CustomField>
    <fullName>qtc_Order_End_Date__c</fullName>
    <formula>EndDate</formula>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>