force-app/main/default/objects/Order/fields/qtc_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>qtc_Order_Type__c</fullName>
    <description>HSR Mass Upload - This is a required field, however if not provided, it will be defaulted to &apos;HSR Standard&apos;.</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HSR Rental Sourcing</fullName>
                <default>true</default>
                <label>HSR Rental Sourcing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>