force-app/main/default/objects/Order/fields/qtc_Partner_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>qtc_Partner_Org_Code__c</fullName>
    <formula>Opportunity.Channel_Office__r.Global_Sales_Org_Code__c</formula>
    <label>Partner Org Code</label>
    <type>Text</type>
</CustomField>