force-app/main/default/objects/Order/fields/qtc_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>qtc_Payment_Term__c</fullName>
    <description>HSR Mass Upload - This is an optional field. If not specified, will be defaulted to 3 NET</description>
    <formula>TEXT(SBQQ__PaymentTerm__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Term</label>
    <type>Text</type>
</CustomField>