force-app/main/default/objects/Order/fields/qtc_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>qtc_PO_Number__c</fullName>
    <description>HSR Mass Upload</description>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>