force-app/main/default/objects/Order/fields/qtc_Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>qtc_Requested_Delivery_Date__c</fullName>
    <description>HSR mass upload - Request date is not mandatory. If not provided, it will be calculated by system. If populated, It should be in format DD-MMM-YYYY.</description>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>