force-app/main/default/objects/Order/fields/qtc_Return_Status__c.field-meta.xml
<CustomField>
    <fullName>qtc_Return_Status__c</fullName>
    <label>Return Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled for Pickup</fullName>
            </value>
            <value>
                <fullName>Pickup Completed</fullName>
            </value>
            <value>
                <fullName>Return Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>