force-app/main/default/objects/Order/fields/qtc_RMA_Number__c.field-meta.xml
<CustomField>
    <fullName>qtc_RMA_Number__c</fullName>
    <label>RMA #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>