force-app/main/default/objects/Order/fields/qtc_Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>qtc_Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>twin from quote</description>
    <label>Ship To Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>