force-app/main/default/objects/Order/fields/qtc_Shipping_Instructions__c.field-meta.xml
<CustomField>
    <fullName>qtc_Shipping_Instructions__c</fullName>
    <description>HSR mass upload. Limit 1000 characters</description>
    <inlineHelpText>Limit 1000 characters</inlineHelpText>
    <label>Shipping Instructions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>