force-app/main/default/objects/Order/fields/qtc_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>qtc_Shipping_Method__c</fullName>
    <description>HSR Mass Upload - For all Order Types except Site Order, this field is optional, however, if not provided it will be defaulted to &apos;Ground&apos;. For Site Orders, this value will be copied from Master Order.</description>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground</fullName>
                <default>true</default>
                <label>Ground</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>