force-app/main/default/objects/Order/fields/qtc_Tracking__c.field-meta.xml
<CustomField>
    <fullName>qtc_Tracking__c</fullName>
    <label>Tracking #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>