force-app/main/default/objects/Order/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__SalesRep__r.FirstName &amp; &quot; &quot; &amp; SBQQ__Quote__r.SBQQ__SalesRep__r.LastName</formula>
    <label>Sales Rep</label>
    <type>Text</type>
</CustomField>