force-app/main/default/objects/Order/validationRules/Prevent_Bill_To_And_Deliver_To_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Bill_To_And_Deliver_To_Update</fullName>
    <active>true</active>
    <description>Non Admin users are not supposed to update Bill To and Deliver to fields</description>
    <errorConditionFormula>AND( ISPICKVAL(Type, &quot;Amendment&quot;), OR( ISCHANGED(qtc_Bill_To_Site__c),ISCHANGED(Deliver_To_Site__c) ) ,!(OR(Contains($Profile.Name,&quot;System Administrator&quot;),Contains($Profile.Name,&quot;Hosp SMB Sales with Hosted&quot;))) )</errorConditionFormula>
    <errorMessage>You cannot update Bill To and Deliver To in Amended Order.</errorMessage>
</ValidationRule>