force-app/main/default/objects/Order/listViews/Activated_Order_Pending_Contract.listView-meta.xml
<ListView>
    <fullName>Activated_Order_Pending_Contract</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ACTIVATEDBY_USER.ALIAS</columns>
    <columns>ORDERS.ACTIVATED_DATE</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Contracted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ORDERS.ACTIVATED_DATE</field>
        <operation>notEqual</operation>
    </filters>
    <label>Activated Order Pending Contract</label>
</ListView>