force-app/main/default/objects/Order/listViews/Amendment_Orders_Pending_Activation.listView-meta.xml
<ListView>
    <fullName>Amendment_Orders_Pending_Activation</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>qtc_Order_Type__c</columns>
    <columns>ORDERS.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.TYPE</field>
        <operation>equals</operation>
    </filters>
    <label>Amendment Orders Pending Activation</label>
</ListView>